--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,6 +14,10 @@ asgiref = "==3.2.9"
 pytz = "==2020.1"
 sqlparse = "==0.3.1"
 PyJWT = "==1.7.1"
+coverage = "*"
+requests = "*"
+gunicorn = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
